fix the shift and width of stat highchart

--- a/domain-server/resources/web/css/style.css
+++ b/domain-server/resources/web/css/style.css
@@ -82,3 +82,7 @@ tr.new-row {
   color: #3c763d;
   background-color: #dff0d8;
 }
+
+.highchart-modal .modal-dialog {
+  width: 650px;
+}
